Button alignment bug 119716

--- a/src/fieldday/sass/media-queries.scss
+++ b/src/fieldday/sass/media-queries.scss
@@ -369,7 +369,7 @@
         }
 
         .custom-amount {
-          margin: 10px 0 0 !important;
+          /* margin: 10px 0 0 !important; */
 
           input {
             width: 100%;
